# FIRM

./: .clang-format  .clang-tidy  .cproject  .gitattributes  .gitignore  .mxproject  .pre-commit-config.yaml  CMakeLists.txt  FIRM Debug.launch  FIRM.ioc  README.md  pyproject.toml
.githooks/: run-clang-tidy.sh
.github/workflows/: clang-format.yml
Core/Inc/: bmp581_spi.h  firm_utils.h  i2c_utils.h  icm45686.h  logger.h  main.h  mmc5983ma.h  packets.h  sdcard.h  spi_utils.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usb_print_debug.h
Core/Src/: Logger.c  bmp581_spi.c  firm_utils.c  i2c_utils.c  icm45686.c  logger.c  main.c  mmc5983ma.c  (+6 more)
FIRM-Client/: README.md  firm_client.pyi  package-lock.json  package.json
KiCad/: #auto_saved_files#  FIRM.kicad_pcb  FIRM.kicad_prl  FIRM.kicad_pro  FIRM.kicad_sch  FIRM.kicad_sch-bak  README.md  fp-lib-table  sym-lib-table  ~FIRM.kicad_sch.lck
STM32/: .clangd  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  FIRM Debug.launch  FIRM.ioc  README.md  README_PI.md  STM32F405XX_FLASH.ld  analyze_packet1_crc.py  compile_commands.json  openocdconfig.yml  pi_data_logger.py  pi_debug_i2c.py  pi_i2c_reader.py  pi_i2c_reader_simple.py  pi_test_i2c.py  stm32f4x.cfg  test_crc.py  verify_crc_match.py
docs/: clang-tidy.md
firm-rs/: Cargo.toml  README.md
python/: test_parser.py  test_serial.py
python-scripts/: calibration.py  decoder.py  decoder_shyam.py  imu_calibration.py
tests/: CMSIS_DSP_README.md  README.md  build_cmsis.bat  build_cmsis.sh  compile_cmsis_dsp.ps1  compile_cmsis_dsp.sh  project.yml
(+460 files in other folders)
